@@ -1,3 +1,8 @@
+2008-07-27  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/36132
+	* gfortran.dg/internal_pack_4.f90: New.
+
 2008-07-26  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
 	PR libfortran/36852
